all: removed dependencies of basics.css; slider: added css for scrollbars; datepicker: header now is table; msgbox: fixed bug with required fields; css-compile: removind tabs from result;

--- a/trunk/source/css/jquery.ajp.slider.css
+++ b/trunk/source/css/jquery.ajp.slider.css
@@ -15,3 +15,13 @@
 	left: 0;
 }
 
+/*
+	ajp-slider: scrollbars common logic
+*/
+
+.ajp-vsb > .control, .ajp-hsb > .control {
+	cursor: pointer;
+	position: relative;
+	top: 0;
+	left: 0;
+}
